--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -70,8 +70,8 @@
                 {% if user.is_authenticated %}
                     <!-- User Profile (Visible to approved content creators) -->
     {% if is_content_creator and user.contentcreator.is_approved %}
-    <li class="nav-item {% if request.resolver_match.url_name == 'portfolios' %}active{% endif %}">
-        <a class="nav-link {% if request.resolver_match.url_name != 'portfolios' %}text-light{% endif %}" href="{% url 'portfolios' %}">Your Profile</a>
+    <li class="nav-item {% if request.resolver_match.url_name == 'your_profile' %}active{% endif %}">
+        <a class="nav-link {% if request.resolver_match.url_name != 'your_profile' %}text-light{% endif %}" href="{% url 'your_profile' %}">Your Profile</a>
     </li>
 {% endif %}
                     <!-- User Management (Visible to staff) -->
