Profile search and view

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -33,6 +33,7 @@
 {% if is_staff_member %}
 <div class="container my-5">
   <a href="{% url 'completed_business_interests' %}" class="btn btn-info">View Completed Business Interests</a>
+  <a href="{% url 'content_creator_profiles' %}" class="btn btn-primary">View Creator Profiles</a>
 </div>
     {% if new_business_interests %}
         <div class="container mt-4">
