--- a/services/templates/services/base.html
+++ b/services/templates/services/base.html
@@ -11,7 +11,10 @@
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% endblock %}
@@ -21,7 +24,7 @@
     <header class="container-fluid m-0 p-0 w-100 d-flex justify-content-center align-items-center">
         <nav class="navbar navbar-expand-lg w-100 glass-navbar">
             <div class="container-fluid d-flex justify-content-between align-items-center ">
-                <a class="navbar-brand" href="{% url 'home' %}">     
+                <a class="navbar-brand justify-content-center" href="{% url 'home' %}">     
                     <div class="brand-container d-flex justify-content-space-between my-1">
                         <h1 class="brand-name m-0">
                             <span class="brand-create">Create</span>
@@ -30,93 +33,96 @@
                     </div>
                 </a> 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon text-light"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                <!-- Home Link (Visible to all) -->
-                <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
-                    <a class="nav-link {% if request.resolver_match.url_name != 'home' %}text-light{% endif %}" href="{% url 'home' %}">Home</a>
-                </li>
-
-                <!-- Business Services (Visible to non-logged in users and staff) -->
-                {% if not user.is_authenticated or is_staff_member  %}
-                    <li class="nav-item {% if request.resolver_match.url_name == 'business_services' %}active{% endif %}">
-                        <a class="nav-link {% if request.resolver_match.url_name != 'business_services' %}text-light{% endif %}" href="{% url 'business_services' %}">Business Services</a>
-                    </li>
-                {% endif %}
-
-                <!-- Creator Services (Visible to all) -->
-                <li class="nav-item {% if request.resolver_match.url_name == 'creator_services' %}active{% endif %}">
-                    <a class="nav-link {% if request.resolver_match.url_name != 'creator_services' %}text-light{% endif %}" href="{% url 'creator_services' %}">Creator Services</a>
-                </li>
-
-                <!-- Gallery (Visible to all) -->
-                <li class="nav-item {% if request.resolver_match.url_name == 'gallery' %}active{% endif %}">
-                    <a class="nav-link {% if request.resolver_match.url_name != 'gallery' %}text-light{% endif %}" href="{% url 'gallery' %}">Gallery</a>
-                </li>
-
-                <!-- Contact (Visible to all) -->
-                <li class="nav-item {% if request.resolver_match.url_name == 'contact' %}active{% endif %}">
-                    <a class="nav-link {% if request.resolver_match.url_name != 'contact' %}text-light{% endif %}" href="{% url 'contact' %}">Contact</a>
-                </li>
-
-                <!-- Testimonials (Visible to all) -->
-                <li class="nav-item {% if request.resolver_match.url_name == 'testimonials' %}active{% endif %}">
-                    <a class="nav-link {% if request.resolver_match.url_name != 'testimonials' %}text-light{% endif %}" href="{% url 'testimonials' %}">Testimonials</a>
-                </li>
-
-                <!-- Conditional Links for Authentication -->
-                {% if user.is_authenticated %}
-                    <!-- User Management (Visible to staff) -->
-                    {% if is_staff_member %}
-                        <li class="nav-item {% if request.resolver_match.url_name == 'user_list' %}active{% endif %}">
-                            <a class="nav-link {% if request.resolver_match.url_name != 'user_list' %}text-light{% endif %}" href="{% url 'user_list' %}">User Management</a>
+                        <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %}">
+                            <a class="nav-link {% if request.resolver_match.url_name != 'home' %}text-light{% endif %}" href="{% url 'home' %}"><i class="fas fa-home"></i> Home</a>
                         </li>
-                    {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="{% url 'logout' %}">Logout</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
-                        <a class="nav-link {% if request.resolver_match.url_name != 'login' %}text-light{% endif %}" href="{% url 'login' %}">Login</a>
-                    </li>
-                    <li class="nav-item {% if request.resolver_match.url_name == 'register_content_creator' %}active{% endif %}">
-                        <a class="nav-link {% if request.resolver_match.url_name != 'register_content_creator' %}text-light{% endif %}" href="{% url 'register_content_creator' %}">Sign Up Creator</a>
-                    </li>
-                    <li class="nav-item {% if request.resolver_match.url_name == 'register_staff' %}active{% endif %}">
-                        <a class="nav-link {% if request.resolver_match.url_name != 'register_staff' %}text-light{% endif %}" href="{% url 'register_staff' %}">Sign Up Staff</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </nav>
-    </header>
-    {% if messages %}
-<div class="container messages">
-    {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}">
-        {{ message }}
-    </div>
-    {% endfor %}
-</div>
-{% endif %}
-    {% endblock %}
-            {% block content %}
-            <!-- Main content will be here -->
-            {% endblock %}
-
-
-    <!-- Footer -->
-    {% block footer %}
-    <footer>
-        <!-- Footer content here -->
-    </footer>
-    {% endblock %}
-
-    <!-- Bootstrap Bundle with Popper and other scripts -->
-    {% block scripts %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Add other scripts if necessary -->
-    {% endblock %}
-</body>
-</html>
+                        <li class="nav-item {% if request.resolver_match.url_name == 'business_services' %}active{% endif %}">
+                            <a class="nav-link {% if request.resolver_match.url_name != 'business_services' %}text-light{% endif %}" href="{% url 'business_services' %}"><i class="fas fa-briefcase"></i> Business Services</a>
+                        </li>
+                        <li class="nav-item {% if request.resolver_match.url_name == 'creator_services' %}active{% endif %}">
+                            <a class="nav-link {% if request.resolver_match.url_name != 'creator_services' %}text-light{% endif %}" href="{% url 'creator_services' %}"><i class="fas fa-paint-brush"></i> Creator Services</a>
+                        </li>
+                        <!-- Additional nav items -->
+                        {% if user.is_authenticated %}
+                        <li class="nav-item {% if request.resolver_match.url_name == 'your_profile' %}active{% endif %}">
+                            <a class="nav-link {% if request.resolver_match.url_name != 'your_profile' %}text-light{% endif %}" href="{% url 'your_profile' %}"><i class="fas fa-user"></i> Your Profile</a>
+                        </li>
+                        {% if is_staff_member %}
+                        <li class="nav-item {% if request.resolver_match.url_name == 'user_list' %}active{% endif %}">
+                            <a class="nav-link {% if request.resolver_match.url_name != 'user_list' %}text-light{% endif %}" href="{% url 'user_list' %}">
+                                <i class="fas fa-users-cog"></i> User Management</a>
+                            </li>
+                            {% endif %}
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item {% if request.resolver_match.url_name == 'login' %}active{% endif %}">
+                                <a class="nav-link {% if request.resolver_match.url_name != 'login' %}text-light{% endif %}" href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a>
+                            </li>
+                            <li class="nav-item {% if request.resolver_match.url_name == 'register_content_creator' %}active{% endif %}">
+                                <a class="nav-link {% if request.resolver_match.url_name != 'register_content_creator' %}text-light{% endif %}" href="{% url 'register_content_creator' %}"><i class="fas fa-user-plus"></i> Sign Up Creator</a>
+                            </li>
+                            <li class="nav-item {% if request.resolver_match.url_name == 'register_staff' %}active{% endif %}">
+                                <a class="nav-link {% if request.resolver_match.url_name != 'register_staff' %}text-light{% endif %}" href="{% url 'register_staff' %}"><i class="fas fa-user-shield"></i> Sign Up Staff</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        {% if messages %}
+        <div class="container messages">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+        {% endblock %}
+        {% block content %}
+        <!-- Main content will be here -->
+        {% endblock %}
+        {% block footer %}
+        <footer class="bg-dark text-light text-center text-lg-start">
+            <div class="container p-4">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Create Nova</h5>
+                        <p>Indonesia's premier digital marketing and web development agency.</p>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Contact</h5>
+                        <ul class="list-unstyled mb-0">
+                            <li>
+                                <a href="mailto:nova@createnova.org" class="text-white">nova@createnova.org</a>
+                            </li>
+                            <li>
+                                <a href="#!" class="text-white">+62 Placeholder Phone Number</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Follow Us</h5>
+                        <a href="https://www.linkedin.com/company/99204935" class="text-white">
+                            <i class="fab fa-linkedin"></i> LinkedIn
+                        </a>
+                    </div>
+                </div>
+                <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                    © 2024 Create Nova
+                </div>
+            </div>
+        </footer>
+        {% endblock %}
+        {% block scripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        {% endblock %}
+    </body>
+    </html>
