update home links

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -61,7 +61,7 @@
                 
                 <h2 class="content-title col-12">Elevate Your Brand with Create Nova</h2>
                 <p class="content-description col-12 ">Join the ranks of the digitally elite with our comprehensive marketing and development services.</p>
-                <a href="#" class=" btn btn-primary btn-3d col-4">Discover More</a>
+                <a href="{% url 'business_services' %}#creator-services" class=" btn btn-primary btn-3d col-4">Discover More</a>
               </div>
             </div>
            
@@ -84,7 +84,7 @@
               <div class="service-content text-center row d-flex justify-content-center align-items-center ">
                 <h2 class="service-title col-12">Website Design & Improvement</h2>
                 <p class="service-description col-12 ">Craft the perfect online presence with custom designs and enhancements tailored to your brand.</p>
-                <a href="#" class="btn btn-3d-service col-4">Learn More</a>
+                <a href="{% url 'business_services' %}#website-services" class="btn btn-3d-service col-4">Learn More</a>
               </div>
             </div>
             <div class="d-flex d-lg-none col-10">
